tests/negative/test_mac_bad_name.orb
sym (foo:i32 100);

mac foo () {};

fnc main () () {};